# rl-order-execution

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  cliff.toml  main.py  pyproject.toml
.github/workflows/: changelog.yaml  ci.yaml  update-docs.yaml
config/: best_params.yaml  config.yaml  markdown.jinja
src/rl_order_execution/: agent.py  environment.py  evaluation.py  optimize.py  settings.py  training.py
tests/: test_simulation.py
