[project]
name = "rl-order-execution"
version = "0.1.0"
description = "Deep Reinforcement Learning for Optimal Trade Execution"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "torch>=2.9.1",
    "PyYAML>=6.0.3",
    "tensorboard>=2.20.0",
    "optuna>=4.6.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "settings-doc>=4.3.2",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
